# agentforge

./: .gitignore  README.md  pyproject.toml
.beads/: interactions.jsonl
agentforge/: __init__.py  cli.py
agentforge/core/: __init__.py  agent_generator.py  executor.py  prompt_builder.py  repo_analyzer.py  spec_parser.py
agentforge/templates/: agent.md.j2
output/: agents.json
output/content-agent/: agent.md
output/router-agent/: agent.md
output/structure-agent/: agent.md
spec/: spec.md  spec_template.md
tests/: conftest.py  test_agent_generator.py  test_executor.py  test_prompt_builder.py  test_repo_analyzer.py  test_smoke.py  test_spec_parser.py
